kubernetes/talos-flux/apps/observability/loki/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: htpasswd
    cert-manager.io/cluster-issuer: letsencrypt-production
    ttraefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: loki
spec:
  ingressClassName: traefik
  rules:
    - host: loki.techtales.io
      http:
        paths:
          - backend:
              service:
                name: loki-gateway
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - loki.techtales.io
      secretName: loki-tls
